--- a/test.ipynb
+++ b/test.ipynb
@@ -1,1 +1,115 @@
-print("test")
+{
+  "metadata": {
+    "kernelspec": {
+      "name": "python",
+      "display_name": "Python (Pyodide)",
+      "language": "python"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "python",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8"
+    }
+  },
+  "nbformat_minor": 4,
+  "nbformat": 4,
+  "cells": [
+    {
+      "cell_type": "code",
+      "source": "import socket",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": 1
+    },
+    {
+      "cell_type": "code",
+      "source": "print(socket.gethostbyname(socket.gethostname()))",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "172.29.1.0\n",
+          "output_type": "stream"
+        }
+      ],
+      "execution_count": 2
+    },
+    {
+      "cell_type": "code",
+      "source": "s = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)\ns.connect((\"8.8.8.8\", 80))\nprint(s.getsockname()[0])",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "ename": "<class 'OSError'>",
+          "evalue": "[Errno 23] Host is unreachable",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m s \u001b[38;5;241m=\u001b[39m socket\u001b[38;5;241m.\u001b[39msocket(socket\u001b[38;5;241m.\u001b[39mAF_INET, socket\u001b[38;5;241m.\u001b[39mSOCK_DGRAM)\n\u001b[0;32m----> 2\u001b[0m \u001b[43ms\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m8.8.8.8\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m80\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(s\u001b[38;5;241m.\u001b[39mgetsockname()[\u001b[38;5;241m0\u001b[39m])\n",
+            "\u001b[0;31mOSError\u001b[0m: [Errno 23] Host is unreachable"
+          ],
+          "output_type": "error"
+        }
+      ],
+      "execution_count": 3
+    },
+    {
+      "cell_type": "code",
+      "source": "def extract_ip():\n    st = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)\n    try:\n        st.connect((\"10.255.255.255\", 1))\n        IP = st.getsockname()[0]\n    except Exception:\n        IP = \"127.0.0.1\"\n    finally:\n        st.close()\n    return IP\nprint(extract_ip())",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "text": "127.0.0.1\n",
+          "output_type": "stream"
+        }
+      ],
+      "execution_count": 4
+    },
+    {
+      "cell_type": "code",
+      "source": "from netifaces import interfaces, ifaddresses, AF_INET\nfor ifaceName in interfaces():\n    addresses = [\n        i[\"addr\"]\n        for i in ifaddresses(ifaceName).setdefault(AF_INET, [{\"addr\": \"No IP addr\"}])\n    ]\n    print(\" \".join(addresses))",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "ename": "<class 'ModuleNotFoundError'>",
+          "evalue": "No module named 'netifaces'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnetifaces\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m interfaces, ifaddresses, AF_INET\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m ifaceName \u001b[38;5;129;01min\u001b[39;00m interfaces():\n\u001b[1;32m      3\u001b[0m     addresses \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      4\u001b[0m         i[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maddr\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m      5\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m ifaddresses(ifaceName)\u001b[38;5;241m.\u001b[39msetdefault(AF_INET, [{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maddr\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo IP addr\u001b[39m\u001b[38;5;124m\"\u001b[39m}])\n\u001b[1;32m      6\u001b[0m     ]\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'netifaces'"
+          ],
+          "output_type": "error"
+        }
+      ],
+      "execution_count": 5
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "execution_count": null
+    }
+  ]
+}
